--- a/src/components/Common/styles.css
+++ b/src/components/Common/styles.css
@@ -7,6 +7,7 @@
     text-align: right;
     max-width: 100%;
     height: 7%;
+    top: 0;
     background: rgb(255, 255, 255);
     position: fixed;
     z-index: 10;
