--- a/src/components/Courses/courses.css
+++ b/src/components/Courses/courses.css
@@ -1,4 +1,4 @@
-.selected_courses {
+.COURSES-DIV .selected_courses {
     margin-top: 35px;
     border: solid 1px rgb(56, 143, 241);
     display: flex;
@@ -7,7 +7,7 @@
     width: 100%;
 }
 
-#main {
+.COURSES-DIV #main {
     padding-top: 3%;
     margin-top: 50px;
     display: flex;
@@ -19,7 +19,7 @@
 
 }
 
-.submit {
+.COURSES-DIV .submit {
     border-top: solid 1px rgb(56, 143, 241);
     width: 100%;
     display: flex;
@@ -27,14 +27,14 @@
     align-items: center;
 }
 
-.submit > * {
+.COURSES-DIV .submit > * {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 
 
-button#revert, button#final_submit{
+.COURSES-DIV button#revert, button#final_submit{
     border: none;
     color: white;
     text-align: center;
@@ -47,7 +47,7 @@ button#revert, button#final_submit{
     padding-right: 5%;
 }
 
-button#revert{
+.COURSES-DIV button#revert{
     background: rgb(141, 141, 141);
     /* display: flex;
     justify-content: center;
@@ -55,40 +55,40 @@ button#revert{
 
 }
 
-button#final_submit{
+.COURSES-DIV button#final_submit{
     background: rgb(38, 197, 144);
 
 }
 
-.credits{
+.COURSES-DIV .credits{
     color: rgb(0, 14, 144);
     text-align: right;
     align-self: flex-start;
 }
 
-td {
+.COURSES-DIV td {
     border: 1px solid rgb(0, 0, 0);
 }
 
-th {
+.COURSES-DIV th {
     border: 1px solid rgb(0, 0, 0);
     color: rgb(0, 14, 144);
 }
 
-.credit {
+.COURSES-DIV .credit {
     color: rgb(0, 14, 144);
     font-weight: bolder;
 
 }
 
-.selected_table{
+.COURSES-DIV .selected_table{
     text-align: center;
     width: 97%;
     margin-bottom: 20px;
 }
 
 
-.delete_button {
+.COURSES-DIV .delete_button {
     background: none;
     border: none;
     color: red;
@@ -98,29 +98,34 @@ th {
 
 }
 
-.status {
+.COURSES-DIV .status {
     border-radius: 5%;
     margin: 3px;
     width: 80%;
     margin: auto;
 }
 
-.status#not_submited {
+.COURSES-DIV .status#not_submited {
     border: 3px rgb(56, 143, 241) solid;
     color:  rgb(56, 143, 241);
 }
 
-.status#submited {
+.COURSES-DIV .status#submited {
     border: 3px rgb(42, 155, 42) solid;
     color: rgb(42, 155, 42);
 }
 
-.status#waiting {
+.COURSES-DIV .status#waiting {
     border: 3px rgb(88, 88, 88) solid;
     color: rgb(88, 88, 88);
 }
 
-.search {
+.COURSES-DIV .status#removed {
+    border: 3px rgb(234, 27, 27) solid;
+    color: rgb(234, 27, 27);
+}
+
+.COURSES-DIV .search {
     border: solid 2px rgb(161, 161, 161);
     display: flex;
     flex-direction: row;
@@ -133,14 +138,14 @@ th {
 
 }
 
-#main > * {
+.COURSES-DIV #main > * {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-#course_name
+.COURSES-DIV #course_name
 {
     align-self: flex-start;
     width: 60%;
@@ -154,7 +159,7 @@ th {
 
 }
 
-.search_button {
+.COURSES-DIV .search_button {
     align-self: flex-end;
     width: 25%;
     margin: 3%;
@@ -166,7 +171,7 @@ th {
 
 }
 
-#search_form {
+.COURSES-DIV #search_form {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -175,13 +180,13 @@ th {
 }
 
 
-.offerings_table{
+.COURSES-DIV .offerings_table{
     text-align: center;
     width: 100%;
     margin-bottom: 20px;
 }
 
-.offerings {
+.COURSES-DIV .offerings {
     margin-top: 35px;
     border: solid 1px rgb(56, 143, 241);
     display: flex;
@@ -190,7 +195,7 @@ th {
     width: 100%;
 }
 
-.courses_types {
+.COURSES-DIV .courses_types {
     border-bottom: solid 1px rgb(56, 143, 241);
     width: 100%;
     display: flex;
@@ -199,11 +204,11 @@ th {
     justify-content: center;
 }
 
-.courses_types > * {
+.COURSES-DIV .courses_types > * {
     /* margin-bottom: 10px; */
 }
 
-.courses_types button {
+.COURSES-DIV .courses_types button {
     border: rgb(141, 141, 141) 1px solid;
     background: rgb(255, 255, 255);
     padding: 1%;
@@ -214,12 +219,12 @@ th {
     font-weight: bolder;
 }
 
-button.selected_button {
+.COURSES-DIV button.selected_button {
     border: none;
     background: rgb(172, 201, 255);
 }
 
-.offerings_table th {
+.COURSES-DIV .offerings_table th {
     border: none;
     border-bottom: solid 1px rgb(56, 143, 241);
     padding: 0;
@@ -229,25 +234,44 @@ button.selected_button {
 }
 
 
-.offerings_table td:first-of-type {
+.COURSES-DIV .offerings_table td:first-of-type {
     border-right: none;
 }
 
-.offerings_table td:last-of-type {
+.COURSES-DIV .offerings_table td:last-of-type {
     border-left: none;
 }
 
-.offerings_table td.description {
+.COURSES-DIV .offerings_table td.description {
     border: none;
+    width: 15%;
 }
 
-.offerings_table tr:last-child td.description {
+.COURSES-DIV .offerings_table th.courses_type {
+    border: none;
+    width: 10%;
+}
+
+.COURSES-DIV .offerings_table th.courses_name {
+    border: none;
+    width: 30%;
+}
+
+
+.COURSES-DIV .offerings_table th.courses_instructor {
+    border: none;
+    width: 20%;
+}
+
+
+
+.COURSES-DIV .offerings_table tr:last-child td.description {
     border-bottom: solid 1px rgb(0, 0, 0);
     /* background: red; */
     
 }
 
-button.action_button {
+.COURSES-DIV button.action_button {
     background: none;
     border: none;
     color: white;
@@ -257,42 +281,44 @@ button.action_button {
     margin: 1%;
 }
 
-button.action_button#normal {
+.COURSES-DIV button.action_button#normal {
     background: rgb(21, 126, 21);
 }
 
-button.action_button#clock {
+.COURSES-DIV button.action_button#clock {
     background: rgb(90, 90, 90);
 }
 
-.capacity {
+.COURSES-DIV .capacity {
     font-weight: bolder;
 }
 
-.capacity#not_full {
+.COURSES-DIV .capacity#not_full {
     color: rgb(0, 14, 144);
 }
 
-.course_type {
+.COURSES-DIV .course_type {
     border-radius: 10%;
     color: white;
     width: 80%;
     margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 
 }
 
-.course_type#general {
+.COURSES-DIV .course_type#Umumi {
     background: rgb(219, 171, 14);
 }
 
-.course_type#fundamental {
+.COURSES-DIV .course_type#Asli {
     background: rgb(45, 177, 133);
 }
 
-.course_type#basic {
+.COURSES-DIV .course_type#Paaye {
     background: rgb(199, 72, 103);
 }
 
-.course_type#ekhtesasi {
+.COURSES-DIV .course_type#Takhasosi {
     background: rgb(37, 136, 248);
 }
