--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -1,4 +1,4 @@
-.schedule {
+.SCHEDULE-DIV .schedule {
     margin-top: 35px;
     border: solid 1px rgba(56, 143, 241);
     display: flex;
@@ -10,7 +10,7 @@
     border-top-right-radius: 5%;
 }
 
-#main {
+.SCHEDULE-DIV #main {
     padding-top: 3%;
     margin-top: 50px;
     display: flex;
@@ -23,7 +23,7 @@
 
 
 
-#main > * {
+.SCHEDULE-DIV #main > * {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,64 +67,64 @@
     
 }
 
-.schedule_header .weekly_label {
+.SCHEDULE-DIV .schedule_header .weekly_label {
     text-align: right;
 }
 
-tr {
+.SCHEDULE-DIV tr {
     height: 120px;
 }
 
-tr:first-of-type {
+.SCHEDULE-DIV tr:first-of-type {
     height: 80px;
 }
 
-td {
+.SCHEDULE-DIV td {
     border: 1px solid rgba(88, 88, 88);
     height: 100%;
     position: relative;
 }
 
-th {
+.SCHEDULE-DIV th {
     border: 1px solid rgba(0, 0, 0);
     color: rgba(0, 14, 144);
 }
 
 
-.schedule_table{
+.SCHEDULE-DIV .schedule_table{
     text-align: center;
     width: 100%;
     height: 100%;
     table-layout: fixed;
 }
 
-.schedule_table tr:first-of-type td{
+.SCHEDULE-DIV .schedule_table tr:first-of-type td{
     padding-top: 2%;
     padding-bottom: 2%;
     border-top: none;
 }
 
 
-.schedule_table tr td:first-of-type{
+.SCHEDULE-DIV .schedule_table tr td:first-of-type{
     padding-top: 2%;
     padding-bottom: 2%;
     border-right: none;
 }
 
-.schedule_table tr:last-of-type td{
+.SCHEDULE-DIV .schedule_table tr:last-of-type td{
     padding-top: 2%;
     padding-bottom: 2%;
     border-bottom: none;
 }
 
 
-.schedule_table tr td:last-of-type{
+.SCHEDULE-DIV .schedule_table tr td:last-of-type{
     padding-top: 2%;
     padding-bottom: 2%;
     border-left: none;
 }
 
-.class_time {
+.SCHEDULE-DIV .class_time {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -132,26 +132,26 @@ th {
     position: relative;
 }
 
-.courseName p {
+.SCHEDULE-DIV .courseName p {
     white-space: nowrap;
     overflow-x: hidden;
 }
 
-.class_time.Ekhtesasi {
+.SCHEDULE-DIV .class_time.Ekhtesasi {
     background: rgba(56, 142, 241, 0.7);
 }
 
 
-.class_time.Paaye {
+.SCHEDULE-DIV .class_time.Paaye {
     background: rgba(45, 177, 133, 0.7);
 }
 
 
-.class_time.Asli {
+.SCHEDULE-DIV .class_time.Asli {
     background: rgba(199, 72, 103, 0.7);
 }
 
-.class_time.Umumi {
+.SCHEDULE-DIV .class_time.Umumi {
     background: rgba(219, 171, 14, 0.7);
 }
 
