--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -137,7 +137,7 @@
     overflow-x: hidden;
 }
 
-.SCHEDULE-DIV .class_time.Ekhtesasi {
+.SCHEDULE-DIV .class_time.Takhasosi {
     background: rgba(56, 142, 241, 0.7);
 }
 
